--- a/ConsultaMVCWeb.csproj
+++ b/ConsultaMVCWeb.csproj
@@ -128,12 +128,18 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\Cliente.cs" />
     <Compile Include="Controllers\ClientesController.cs" />
+    <Compile Include="Controllers\Contacto_ClienteController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Dto\ClienteDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Clientes.cs">
+      <DependentUpon>MiEmpresaModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Contacto_Cliente.cs">
       <DependentUpon>MiEmpresaModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\MiEmpresaModel.Context.cs">
@@ -151,6 +157,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MiEmpresaModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\Tipo_Contacto.cs">
+      <DependentUpon>MiEmpresaModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -164,8 +173,8 @@
     <Content Include="Content\Site.css" />
     <Content Include="Models\MiEmpresaModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>MiEmpresaModel.Context.cs</LastGenOutput>
       <DependentUpon>MiEmpresaModel.edmx</DependentUpon>
+      <LastGenOutput>MiEmpresaModel.Context.cs</LastGenOutput>
     </Content>
     <Content Include="Models\MiEmpresaModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -212,6 +221,11 @@
     <Content Include="Views\Clientes\Edit.cshtml" />
     <Content Include="Views\Clientes\Index.cshtml" />
     <Content Include="Views\Clientes\Saludo.cshtml" />
+    <Content Include="Views\Contacto_Cliente\Create.cshtml" />
+    <Content Include="Views\Contacto_Cliente\Delete.cshtml" />
+    <Content Include="Views\Contacto_Cliente\Details.cshtml" />
+    <Content Include="Views\Contacto_Cliente\Edit.cshtml" />
+    <Content Include="Views\Contacto_Cliente\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
