--- a/Web.config
+++ b/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -58,6 +58,9 @@
   </system.codedom>
   <connectionStrings>
     <add name="Practica_PatronesEntities" connectionString="metadata=res://*/Models.MiEmpresaModel.csdl|res://*/Models.MiEmpresaModel.ssdl|res://*/Models.MiEmpresaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Practica_Patrones;persist security info=True;user id=sa;password=root308/*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="masterEntities" connectionString="metadata=res://*/Models..csdl|res://*/Models..ssdl|res://*/Models..msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;persist security info=True;user id=sa;password=root308/*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Practica_PatronesEntities1" connectionString="metadata=res://*/Models.ContactoModel.csdl|res://*/Models.ContactoModel.ssdl|res://*/Models.ContactoModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Practica_Patrones;persist security info=True;user id=sa;password=root308/*;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Practica_PatronesEntities2" connectionString="metadata=res://*/Models.MiEmpresaModel.csdl|res://*/Models.MiEmpresaModel.ssdl|res://*/Models.MiEmpresaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Practica_Patrones;persist security info=True;user id=sa;password=root308/*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
